// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle should render with a label 1`] = `
<ng-ais-toggle
  cx={[Function Function]}
  label={[Function String]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
  values={[Function Object]}
>
  
      <div
    class="ais-Toggle"
  >
    
        
    <div
      class="ais-Toggle-body ais-body"
    >
      
          
      <ul
        class="ais-Toggle-list"
      >
        
            
        <li
          class="ais-Toggle-item"
        >
          
              
          <label
            class="ais-Toggle-label"
          >
            
                
            <input
              class="ais-Toggle-checkbox"
              type="checkbox"
              value="foobar"
            />
            
                Foo Label
                
            <span
              class="ais-Toggle-count"
            >
              
                  666
                
            </span>
            
              
          </label>
          
            
        </li>
        
          
      </ul>
      
        
    </div>
    
      
  </div>
    
</ng-ais-toggle>
`;

exports[`Toggle should render with state 1`] = `
<ng-ais-toggle
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
  values={[Function Object]}
>
  
      <div
    class="ais-Toggle"
  >
    
        
    <div
      class="ais-Toggle-body ais-body"
    >
      
          
      <ul
        class="ais-Toggle-list"
      >
        
            
        <li
          class="ais-Toggle-item"
        >
          
              
          <label
            class="ais-Toggle-label"
          >
            
                
            <input
              class="ais-Toggle-checkbox"
              type="checkbox"
              value="foobar"
            />
            
                foobar
                
            <span
              class="ais-Toggle-count"
            >
              
                  666
                
            </span>
            
              
          </label>
          
            
        </li>
        
          
      </ul>
      
        
    </div>
    
      
  </div>
    
</ng-ais-toggle>
`;

exports[`Toggle should render without state 1`] = `
<ng-ais-toggle
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
  values={[Function Object]}
>
  
      <div
    class="ais-Toggle"
  >
    
        
    <div
      class="ais-Toggle-body ais-body"
    >
      
          
      <ul
        class="ais-Toggle-list"
      >
        
            
        <li
          class="ais-Toggle-item"
        >
          
              
          <label
            class="ais-Toggle-label"
          >
            
                
            <input
              class="ais-Toggle-checkbox"
              type="checkbox"
              value=""
            />
            
                
                
            <span
              class="ais-Toggle-count"
            >
              
                  
                
            </span>
            
              
          </label>
          
            
        </li>
        
          
      </ul>
      
        
    </div>
    
      
  </div>
    
</ng-ais-toggle>
`;
